auto-stretch attempt to keep image

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       margin-right: 0; 
     }
   </style>
-<script type="application/json" id="xaringanExtra-editable-docid">{"id":"fa261c3cf5ce4b589de16d6d90f28c22","expires":1}</script><script src="index_files/libs/himalaya-1.1.0/himalaya.js"></script><script src="index_files/libs/js-cookie-3.0.0/js.cookie.js"></script><link href="index_files/libs/editable-0.2.6/editable.css" rel="stylesheet">
+<script type="application/json" id="xaringanExtra-editable-docid">{"id":"fcdd1674f2aa4f3da8fc2c817a02e23c","expires":1}</script><script src="index_files/libs/himalaya-1.1.0/himalaya.js"></script><script src="index_files/libs/js-cookie-3.0.0/js.cookie.js"></script><link href="index_files/libs/editable-0.2.6/editable.css" rel="stylesheet">
 <script src="index_files/libs/editable-0.2.6/editable.js"></script>
 </head>
 <body class="quarto-light">
@@ -340,8 +340,11 @@ Liza Bolton
 
   <p class="date">2024-03-08</p>
 </section><section id="scan-for-slides" class="title-slide slide level1 center"><h1>scan for slides</h1>
-
-<img data-src="img/slide-qr.png" class="r-stretch quarto-figure-center"><p>or go to <a href="link.lizabolton.com">link.lizabolton.com</a></p>
+<div class="quarto-figure quarto-figure-center">
+<figure><p><img data-src="img/slide-qr.png"></p>
+</figure>
+</div>
+<p>or go to <a href="link.lizabolton.com">link.lizabolton.com</a></p>
 </section><section><section id="kia-ora-im-liza" class="title-slide slide level1 center"><h1>kia ora, i’m liza!</h1>
 <p>Your friendly neighbourhood statistician.</p>
 <div class="cell">
@@ -401,7 +404,13 @@ My name is Liza</p>
 </div>
 </section><section id="i-have-data-why-do-i-need-statistics" class="slide level2"><h2>I have data, why do I need statistics?</h2>
 <p>Have some hypotheses going in to test o If data is consistent with your hypotheses, is it consistent with others? - Henry Cooke’s recent data viz on public servants? Might be paywalled (library) - Data moves concept (Erickson et al.&nbsp;2019) o Summarising, merging, filtering, grouping, calculating: While you’re likely doing many if not all of these things already, I always find a clear framework to be extremely helpful in organising my own thoughts and actions  With secondary data there is also the need to decipher choices and interpret metadata (names, units)</p>
-</section></section><section><section id="resources-references" class="title-slide slide level1 center"><h1>resources &amp; references</h1>
+</section></section><section id="sampling-variation" class="title-slide slide level1 center"><h1>sampling variation</h1>
+<p>Using the data from the warm up activity we can see</p>
+</section><section id="testing-testing-1-2-3" class="title-slide slide level1 center"><h1>testing, testing, 1 2 3</h1>
+
+</section><section id="risky-business" class="title-slide slide level1 center"><h1>risky business</h1>
+<p>pill case study and bacon?</p>
+</section><section><section id="resources-references" class="title-slide slide level1 center"><h1>resources &amp; references</h1>
 
 </section><section id="further-resources" class="slide level2"><h2>further resources</h2>
 <p>(All FREE unless indicated with $$$)</p>
