will a png worrrrrk?

--- a/index.html
+++ b/index.html
@@ -320,14 +320,14 @@
       margin-right: 0; 
     }
   </style>
-<script type="application/json" id="xaringanExtra-editable-docid">{"id":"xedc6ebcdd3244e386ca2d73dbc2e361","expires":1}</script><script src="index_files/libs/himalaya-1.1.0/himalaya.js"></script><script src="index_files/libs/js-cookie-3.0.0/js.cookie.js"></script><link href="index_files/libs/editable-0.2.6/editable.css" rel="stylesheet">
+<script type="application/json" id="xaringanExtra-editable-docid">{"id":"x665f0ac8eff4c939b7407b752503723","expires":1}</script><script src="index_files/libs/himalaya-1.1.0/himalaya.js"></script><script src="index_files/libs/js-cookie-3.0.0/js.cookie.js"></script><link href="index_files/libs/editable-0.2.6/editable.css" rel="stylesheet">
 <script src="index_files/libs/editable-0.2.6/editable.js"></script>
 </head>
 <body class="quarto-light">
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" data-background-image="/img/title_image.jpg" data-background-opacity="0.4" class="quarto-title-block center"><h1 class="title">the art and science of learning from data</h1>
+<section id="title-slide" data-background-image="/img/title_image.png" data-background-opacity="0.4" class="quarto-title-block center"><h1 class="title">the art and science of learning from data</h1>
   <p class="subtitle">data aotearoa 2024</p>
 
 <div class="quarto-title-authors">
