--- a/index.html
+++ b/index.html
@@ -320,14 +320,14 @@
       margin-right: 0; 
     }
   </style>
-<script type="application/json" id="xaringanExtra-editable-docid">{"id":"x665f0ac8eff4c939b7407b752503723","expires":1}</script><script src="index_files/libs/himalaya-1.1.0/himalaya.js"></script><script src="index_files/libs/js-cookie-3.0.0/js.cookie.js"></script><link href="index_files/libs/editable-0.2.6/editable.css" rel="stylesheet">
+<script type="application/json" id="xaringanExtra-editable-docid">{"id":"b79cb7e3157b41a0838b7a1976cc3db3","expires":1}</script><script src="index_files/libs/himalaya-1.1.0/himalaya.js"></script><script src="index_files/libs/js-cookie-3.0.0/js.cookie.js"></script><link href="index_files/libs/editable-0.2.6/editable.css" rel="stylesheet">
 <script src="index_files/libs/editable-0.2.6/editable.js"></script>
 </head>
 <body class="quarto-light">
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" data-background-image="/img/title_image.png" data-background-opacity="0.4" class="quarto-title-block center"><h1 class="title">the art and science of learning from data</h1>
+<section id="title-slide" data-background-image="title_image.png" data-background-opacity="0.4" class="quarto-title-block center"><h1 class="title">the art and science of learning from data</h1>
   <p class="subtitle">data aotearoa 2024</p>
 
 <div class="quarto-title-authors">
@@ -341,7 +341,7 @@ liza bolton
   <p class="date">2024-03-08</p>
 </section><section id="scan-for-slides" class="title-slide slide level1 center"><h1>scan for slides</h1>
 <div class="quarto-figure quarto-figure-center">
-<figure><p><img data-src="img/slide-qr.png" width="700"></p>
+<figure><p><img data-src="img/slide-qr.png" width="650"></p>
 </figure>
 </div>
 <p>or go to <a href="link.lizabolton.com">link.lizabolton.com</a></p>
@@ -398,7 +398,7 @@ My name is Liza</p>
       }</style></aside></section><section id="quick-write-whats-your-experience-with-statistics" class="slide level2"><h2>quick, write! what’s your experience with “statistics”?</h2>
 <p>Go to <a href="https://statsapps.online/slinky/G291726211GT2H/student/">this link</a><sup>1</sup> and write a short answer. It is anonymous.</p>
 <div class="quarto-figure quarto-figure-center">
-<figure><p><img data-src="img/quickwrite-qr.png" width="700"></p>
+<figure><p><img data-src="img/quickwrite-qr.png" width="650"></p>
 </figure>
 </div>
 <aside><ol class="aside-footnotes"><li id="fn2"><p>This is also on my <a href="https://link.lizabolton.com/">link.lizabolton.com</a> page as ‘<a href="https://statsapps.online/write/G292N1Q132D9/create/">Quick, write! app</a>’.</p></li></ol></aside></section><section id="plan-for-this-session" class="slide level2"><h2>plan for this session</h2>
@@ -446,8 +446,7 @@ My name is Liza</p>
 </div>
 </section><section id="sampling-variation" class="slide level2"><h2>sampling variation</h2>
 <p><strong>Sampling variation</strong> is the</p>
-<p>---</p>
-<div class="quarto-figure quarto-figure-center">
+</section><section class="slide level2"><div class="quarto-figure quarto-figure-center">
 <figure><p><img data-src="https://www.stat.auckland.ac.nz/~wild/WPRH/AnimGifs/boxes_2samp_mem_10_600.gif" style="width:88.0%"></p>
 <figcaption>A gif showing box plot summaries for a range of samples of size 10 from two populations.</figcaption></figure>
 </div>
