--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       margin-right: 0; 
     }
   </style>
-<script type="application/json" id="xaringanExtra-editable-docid">{"id":"d51f2a73c28248b3a734f8ddabbbb4ac","expires":1}</script><script src="index_files/libs/himalaya-1.1.0/himalaya.js"></script><script src="index_files/libs/js-cookie-3.0.0/js.cookie.js"></script><link href="index_files/libs/editable-0.2.6/editable.css" rel="stylesheet">
+<script type="application/json" id="xaringanExtra-editable-docid">{"id":"fc9026010d354d2eb1d7ce8742e4f640","expires":1}</script><script src="index_files/libs/himalaya-1.1.0/himalaya.js"></script><script src="index_files/libs/js-cookie-3.0.0/js.cookie.js"></script><link href="index_files/libs/editable-0.2.6/editable.css" rel="stylesheet">
 <script src="index_files/libs/editable-0.2.6/editable.js"></script>
 </head>
 <body class="quarto-light">
@@ -648,7 +648,7 @@ My name is Liza</p>
 <p><br></p>
 <ul>
 <li class="fragment">I just don’t know which type of universe this is…</li>
-<li class="fragment">… and I’l never know.</li>
+<li class="fragment">… and I’ll never know.</li>
 </ul>
 </div>
 <div class="footer">
